test/unique/neg/swap-field-not-unique.check
swap-field-not-unique.scala:10: error: field must be unique
    swap(this.f, x)
        ^
one error found
